[gd_scene load_steps=18 format=3 uid="uid://cdfbj1oyr0vl5"]

[ext_resource type="Script" uid="uid://b7hku5cs4rmy6" path="res://Scripts/annadaeus.gd" id="1_4xvhl"]
[ext_resource type="Texture2D" uid="uid://bk8qao521iy21" path="res://Assets/Sprites/Spritesheet.png" id="2_20pnm"]
[ext_resource type="Script" uid="uid://s244dhbmprhx" path="res://Scripts/node_pool.gd" id="3_qhmnp"]
[ext_resource type="PackedScene" uid="uid://shyk8gpa8u3i" path="res://Scenes/troubadour_bolt.tscn" id="4_qalx6"]
[ext_resource type="FontFile" uid="uid://djcjuyoolr6e1" path="res://Assets/Fonts/alagard_by_pix3m-d6awiwp.ttf" id="5_20pnm"]
[ext_resource type="Shader" uid="uid://clonmnbb5h1pk" path="res://Scenes/red_glow_shader.gdshader" id="6_4xvhl"]
[ext_resource type="Texture2D" uid="uid://cgr378xi2neye" path="res://Assets/Sprites/green aura glow.png" id="7_cti21"]
[ext_resource type="AudioStream" uid="uid://rte3djdolcxw" path="res://Assets/Audio/dingle-106476.mp3" id="8_cti21"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfdtf"]
size = Vector2(20, 28)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pegji"]
bg_color = Color(0.201527, 0.201527, 0.201527, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5abox"]
bg_color = Color(0.94902, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_dmkvq"]
radius = 173.072

[sub_resource type="CircleShape2D" id="CircleShape2D_20pnm"]
radius = 199.251

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dnpss"]
shader = ExtResource("6_4xvhl")
shader_parameter/pulse_speed = 4.5
shader_parameter/max_alpha = 0.1

[sub_resource type="Gradient" id="Gradient_4xvhl"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0.5, 0, 0.5)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cti21"]
gradient = SubResource("Gradient_4xvhl")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4xvhl"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 360.0
initial_velocity_min = 500.0
initial_velocity_max = 600.0
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.2
color_ramp = SubResource("GradientTexture1D_cti21")

[node name="annadaeus" type="CharacterBody2D" groups=["friendly"]]
collision_layer = 32
collision_mask = 539
script = ExtResource("1_4xvhl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, -1)
shape = SubResource("RectangleShape2D_sfdtf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -2.5)
texture = ExtResource("2_20pnm")
region_enabled = true
region_rect = Rect2(1604, 257, 25, 31)

[node name="muzzle" type="Node2D" parent="."]
position = Vector2(-8, 0)

[node name="bullet_pool" type="Node" parent="."]
script = ExtResource("3_qhmnp")
node_scene = ExtResource("4_qalx6")

[node name="avoidance_ray" type="RayCast2D" parent="."]
target_position = Vector2(-64, 0)
collision_mask = 1075

[node name="health_bar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -22.0
offset_right = 11.0
offset_bottom = -20.0
theme_override_styles/background = SubResource("StyleBoxFlat_pegji")
theme_override_styles/fill = SubResource("StyleBoxFlat_5abox")
rounded = true
show_percentage = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="defense_zone" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_dmkvq")

[node name="casting_label" type="Label" parent="."]
offset_left = -75.0
offset_top = -44.0
offset_right = 76.0
offset_bottom = -21.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_20pnm")
theme_override_font_sizes/font_size = 16

[node name="casting_timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="renewal_aura" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1057

[node name="CollisionShape2D" type="CollisionShape2D" parent="renewal_aura"]
visible = false
shape = SubResource("CircleShape2D_20pnm")

[node name="aura_glow" type="Sprite2D" parent="renewal_aura"]
modulate = Color(0.5, 0.75, 20.995, 1)
show_behind_parent = true
material = SubResource("ShaderMaterial_dnpss")
position = Vector2(0.499989, 0.499996)
scale = Vector2(0.387695, 0.397461)
texture = ExtResource("7_cti21")

[node name="courage_aura" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1057

[node name="CollisionShape2D" type="CollisionShape2D" parent="courage_aura"]
visible = false
shape = SubResource("CircleShape2D_20pnm")

[node name="aura_glow" type="Sprite2D" parent="courage_aura"]
modulate = Color(0.5, 0.75, 20.995, 1)
show_behind_parent = true
material = SubResource("ShaderMaterial_dnpss")
position = Vector2(0.500004, 2.5)
scale = Vector2(0.385742, 0.389648)
texture = ExtResource("7_cti21")

[node name="renewal_aura_timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="courage_aura_timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="finale_particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 1.2
one_shot = true
explosiveness = 0.9
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_4xvhl")

[node name="finale_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_cti21")
